# polarsen

./: .env.test  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  RELEASE_NOTES.md  docker-bake.hcl  pyproject.toml
.github/templates/: CHANGELOG.md.j2
.github/workflows/: build-docker.yml  release.yml  tests.yml
infra/: api.Dockerfile  api.Dockerfile.dockerignore  bot.Dockerfile  bot.Dockerfile.dockerignore  cli.Dockerfile  cli.Dockerfile.dockerignore  compose.yml  docker-compose.database.yml  template.env  test.Dockerfile
infra/static/: init-s3.sh  pg_hba.conf  postgres.conf
polarsen/: __init__.py  __main__.py  env.py  logs.py  pg.py  s3_utils.py  utils.py
polarsen/ai/: embeddings.py
polarsen/ai/conversations/: utils.py  v2.py
polarsen/api/: __init__.py  data.py  dependencies.py  main.py  models.py  run.py  utils.py
polarsen/bot/: bot.py  data.py  env.py  models.py  run.py  utils.py
polarsen/bot/intl/: __init__.py  commands.toml  lang.py  lang.toml
polarsen/cli/: __init__.py  db.py  ingest.py  listener.py  run.py  utils.py
polarsen/cli/embeddings/: __init__.py  run.py
polarsen/common/: chat.py  search.py  utils.py
polarsen/common/models/: __init__.py  utils.py
polarsen/common/models/gemini/: __init__.py  fetch.py  utils.py
polarsen/common/models/grok/: fetch.py  utils.py
polarsen/common/models/mistral/: __init__.py  fetch.py  tokens.py  utils.py
polarsen/common/models/openai/: fetch.py  utils.py
polarsen/common/models/self_hosted/: fetch.py  utils.py
polarsen/db/: __init__.py  ai.py  chat.py  utils.py
polarsen/telemetry/: sentry.py
sql/: 00-db.sql  01-users.sql  02-chats.sql  03-ai.sql  04-user-chats.sql
tests/: conftest.py  test_group.py  utils.py
tests/api/: conftest.py  test_api.py
tests/bot/: test_handlers.py
tests/cli/: embeddings.py  segmentation.py
tests/common/: conftest.py  test_gemini.py  test_mistral.py  test_search.py  test_utils.py
tests/data/: db.py  utils.py
tests/db/: conftest.py  test_chat.py
